<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical">
<TextView
    android:id="@+id/main_menu_header"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingBottom="1dp"
    android:paddingTop="6dp"
    android:text="@string/app_name"
    android:textSize="21dp"
    android:textStyle="bold" />
<!--<TextView      android:background="#025"
    style="@style/StandardFont"
    android:padding="20dp"
    android:text="@string/the_current_health_center_is"/>
<Spinner
    android:id="@+id/healthCenterSpinner"
    style="@style/StandardFont"
    android:layout_margin="3dp" />  -->
<TableLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="20dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TableRow>
		<Button 
			android:text="@string/ScanButton" 
			android:id="@+id/ScanButton" 
			style="@style/StandardButton">	
		</Button>
		<Button 
			android:text="@string/ViewFormsButton" 
			android:id="@+id/ViewFormsButton" 
			style="@style/StandardButton">
		</Button>
    </TableRow>

    <TableRow>
		<Button 
			android:text="@string/InstructionsButton" 
			android:id="@+id/InstructionsButton" 
			style="@style/StandardButton">
		</Button>
		<Button 
			android:text="@string/SettingsButton" 
			android:id="@+id/SettingsButton" 
			style="@style/StandardButton">
		</Button>
    </TableRow>
</TableLayout>    
</LinearLayout>
